<resources>
    <string name="app_name">Restaurant Health Inspector</string>

    <!-- Description List -->
    <string name="DL_101">Building not in accordance with the rules </string>
    <string name="DL_102">Failure to comply food premises</string>
    <string name="DL_103">Operates without food licenses </string>
    <string name="DL_104">Operates without location permit</string>
    <string name="DL_201">Contaminated or unfit food</string>
    <string name="DL_202">Food not safely process</string>
    <string name="DL_203">Food not safely cooled</string>
    <string name="DL_204">Food not safely cooked or reheated</string>
    <string name="DL_205">Heat sensitive food store above 4°C</string>
    <string name="DL_206">Cold sensitive food store below 60°C</string>
    <string name="DL_208">Unauthorized food source</string>
    <string name="DL_209">Food not preserved properly</string>
    <string name="DL_210">Food not thawed properly</string>
    <string name="DL_211">Frozen food stored above -18°C</string>
    <string name="DL_212">Food handling procedures not provided</string>
    <string name="DL_301">Unsanitary food handling equipment</string>
    <string name="DL_302">food handling equipment not sanitized properly</string>
    <string name="DL_303">Inadequate sanitary maintenance facilities</string>
    <string name="DL_304">Premises not pests free</string>
    <string name="DL_305">High risk of pests</string>
    <string name="DL_306">Unsanitary food premises</string>
    <string name="DL_307">Unsuitable food handling equipment</string>
    <string name="DL_308">Deteriorate food handling equipment</string>
    <string name="DL_309">Chemicals cleaners not stored properly</string>
    <string name="DL_310">Reuse of single use kitchen products</string>
    <string name="DL_311">Maintenance not up to standard</string>
    <string name="DL_312">Unrelated food stored on the premises</string>
    <string name="DL_313">Unauthorized live animal exist</string>
    <string name="DL_314">Absences of written sanitation procedures</string>
    <string name="DL_315">Refrigeration lacks accurate thermometers</string>
    <string name="DL_401">Inadequate hand wash station</string>
    <string name="DL_402">Hand wash guideline not followed</string>
    <string name="DL_403">Employees lacks hygiene</string>
    <string name="DL_404">Employee smoking in food premises</string>
    <string name="DL_501">Absences of FOODSAFE Level 1</string>
    <string name="DL_502">Lacks FOODSAFE LEVEL 1 if operator is absence</string>

    <!-- Long Description List -->
    <string name="LDL_101">Not Critical, Plans/construction/alterations not in accordance with the Regulation [s. 3; s. 4]</string>
    <string name="LDL_102">Not Critical, Operation of an unapproved food premises [s. 6(1)]</string>
    <string name="LDL_103">Not Critical, Failure to hold a valid permit while operating a food service establishment [s. 8(1)]</string>
    <string name="LDL_104">Not Critical, Permit not posted in a conspicuous location [s. 8(7)]</string>
    <string name="LDL_201">Critical, Food contaminated or unfit for human consumption [s. 13]</string>
    <string name="LDL_202">Critical, Food not processed in a manner that makes it safe to eat [s. 14(1)]</string>
    <string name="LDL_203">Critical, Food not cooled in an acceptable manner [s. 12(a)]</string>
    <string name="LDL_204">Critical, Food not cooked or reheated in a manner that makes it safe to eat [s. 14(1)]</string>
    <string name="LDL_205">Critical, Cold potentially hazardous food stored/displayed above 4 °C. [s. 14(2)]</string>
    <string name="LDL_206">Critical, Hot potentially hazardous food stored/displayed below 60 °C. [s. 14(2)]</string>
    <string name="LDL_208">Not Critical, Foods obtained from unapproved sources [s. 11]</string>
    <string name="LDL_209">Not Critical, Food not protected from contamination [s. 12(a)]</string>
    <string name="LDL_210">Not Critical, Food not thawed in an acceptable manner [s. 14(2)]</string>
    <string name="LDL_211">Not Critical, Frozen potentially hazardous food stored/displayed above -18 °C. [s. 14(3)]</string>
    <string name="LDL_212">Not Critical, Operator has not provided acceptable written food handling procedures [s. 23]</string>
    <string name="LDL_301">Critical, Equipment/utensils/food contact surfaces not maintained in sanitary condition [s. 17(1)]</string>
    <string name="LDL_302">Critical, Equipment/utensils/food contact surfaces not properly washed and sanitized [s. 17(2)]</string>
    <string name="LDL_303">Critical, Equipment/facilities/hot and cold water for sanitary maintenance not adequate [s. 17(3); s. 4(1)(f)]</string>
    <string name="LDL_304">Not Critical, Premises not free of pests [s. 26(a)]</string>
    <string name="LDL_305">Not Critical, Conditions observed that may allow entrance/harbouring/breeding of pests [s. 26(b,c)]</string>
    <string name="LDL_306">Not Critical, Food premises not maintained in a sanitary condition [s. 17(1)]</string>
    <string name="LDL_307">Not Critical, Equipment/utensils/food contact surfaces are not of suitable design/material [s. 16; s. 19]</string>
    <string name="LDL_308">Not Critical, Equipment/utensils/food contact surfaces are not in good working order [s. 16(b)]</string>
    <string name="LDL_309">Not Critical, Chemicals cleansers and similar agents stored or labeled improperly [s. 27]</string>
    <string name="LDL_310">Not Critical, Single use containers and utensils are used more than once [s. 20]</string>
    <string name="LDL_311">Not Critical, Premises not maintained as per approved plans [s. 6(1)(b)]</string>
    <string name="LDL_312">Not Critical, Items not required for food premises operation being stored on the premises [s. 18]</string>
    <string name="LDL_313">Not Critical, Live animal on the premises excluding guide animal in approved areas [s. 25(1)]</string>
    <string name="LDL_314">Not Critical, Operator has not provided acceptable written sanitation procedures [s. 24]</string>
    <string name="LDL_315">Not Critical, Refrigeration units and hot holding equipment lack accurate thermometers [s. 19(2)]</string>
    <string name="LDL_401">Critical, Adequate hand washing stations not available for employees [s. 21(4)]</string>
    <string name="LDL_402">Critical, Employee does not wash hands properly or at adequate frequency [s. 21(3)]</string>
    <string name="LDL_403">Not Critical, Employee lacks good personal hygiene clean clothing and hair control [s. 21(1)]</string>
    <string name="LDL_404">Not Critical, Employee smoking in food preparation/processing/storage areas [s. 21(2)]</string>
    <string name="LDL_501">Not Critical, Operator does not have FOODSAFE Level 1 or Equivalent [s. 10(1)]</string>
    <string name="LDL_502">Not Critical, In operator’s absence no staff on duty has FOODSAFE Level 1 or equivalent [s. 10(2)]</string>

    <!-- Other -->
    <string name="issues">Issues</string>
    <string name="hazard_level">Hazard Level</string>
    <string name="date">Date</string>
    <string name="inspection">Inspection</string>
    <string name="non_critical">Non Critical</string>
    <string name="critical">Critical</string>
    <string name="severity">Severity</string>
    <string name="brief_description">Brief Description</string>
    <string name="violation">Violation</string>
    <string name="restaurant">Restaurant</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="inspection_reports">Inspection Reports</string>
    <string name="address">Address</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="back">back</string>
    <string name="violations">Violations</string>
    <string name="inspection_type">Inspection Type</string>
    <string name="date">Date</string>
</resources>