<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/listI_imgHazard"
        android:layout_width="44dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/hazard_level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hazard_high" />

    <TextView
        android:id="@+id/listI_txtHazardNum"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_weight="1"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/hazard_level"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/listI_imgHazard"
        app:layout_constraintStart_toStartOf="@+id/listI_imgHazard"
        app:layout_constraintTop_toBottomOf="@+id/listI_imgHazard" />

    <TextView
        android:id="@+id/listI_txtNonCriticalNum"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="1"
        android:text="@string/non_critical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listI_txtDateNum" />

    <TextView
        android:id="@+id/listI_txtCriticalNum"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/critical"
        app:layout_constraintStart_toEndOf="@+id/listI_imgHazard"
        app:layout_constraintTop_toBottomOf="@+id/listI_txtDateNum" />

    <TextView
        android:id="@+id/listI_txtDateNum"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/date"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toEndOf="@+id/listI_imgHazard"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listI_txtCriticalNumAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/number"
        app:layout_constraintStart_toEndOf="@+id/listI_txtCriticalNum"
        app:layout_constraintTop_toBottomOf="@+id/listI_txtDateNum" />

    <TextView
        android:id="@+id/listI_txtNonCriticalNumAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/number"
        app:layout_constraintStart_toEndOf="@+id/listI_txtNonCriticalNum"
        app:layout_constraintTop_toBottomOf="@+id/listI_txtDateNum" />

</androidx.constraintlayout.widget.ConstraintLayout>
