<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/restaurantIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/restaurantName"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@+id/restaurantIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewIssues"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/issues"
        app:layout_constraintStart_toEndOf="@+id/restaurantIcon"
        app:layout_constraintTop_toBottomOf="@+id/restaurantName" />

    <TextView
        android:id="@+id/textViewNumberofIssues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/textViewIssues"
        app:layout_constraintTop_toBottomOf="@+id/restaurantName" />

    <TextView
        android:id="@+id/textViewHazard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/hazard_level"
        app:layout_constraintStart_toEndOf="@+id/textViewNumberofIssues"
        app:layout_constraintTop_toBottomOf="@+id/restaurantName" />

    <TextView
        android:id="@+id/textViewHazardLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/textViewHazard"
        app:layout_constraintTop_toBottomOf="@+id/restaurantName" />

    <ImageView
        android:id="@+id/imageViewHazard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/textViewHazardLevel"
        app:layout_constraintTop_toBottomOf="@+id/restaurantName"
        app:srcCompat="@android:drawable/presence_video_online" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/date"
        app:layout_constraintStart_toEndOf="@+id/restaurantName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCustomDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/textViewDate"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
